#211 Fix overlapping emoji names

--- a/src/modules/settings/_server_settings.scss
+++ b/src/modules/settings/_server_settings.scss
@@ -100,4 +100,12 @@
             margin-bottom: 24px;
         }
     }
+
+    // Always display the emoji name textbox
+    .emojiInput-B8MGXq{
+        opacity: 1;
+    }
+    .emojiAliasPlaceholder-3oShSx{
+        display: none;
+    }
 }
